--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,5 +21,5 @@
 </head>
 <body>
 	<h1>Hello World Example</h1>
-    <img src="https://miro.medium.com/max/831/1*lofoqPR4NfLeBQU1pBYxlg.jpeg" alt="World Picture">
+    <img src='<%= asset_path("hello_world.jpeg") %>' alt="World Picture">
 </body>
