--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,14 @@
     
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-  
+
+    <% if current_usuario %>
+      <%= link_to "Cerrar sesion", destroy_usuario_session_path, mehtod: :delete %>
+    <% else %>
+      <%= link_to "Iniciar sesion", new_usuario_session_path %>
+      <%= link_to "Registrarme", new_usuario_registration_path %>
+    <% end %>
+      
     <%= yield %>
     
   </body>
