CRUD turno creado

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <p class="alert"><%= alert %></p>
 
     <% if current_usuario %>
-      <%= link_to "Cerrar sesion", destroy_usuario_session_path, mehtod: :delete %>
+      <%= link_to "Cerrar sesion", destroy_usuario_session_path, method: :delete %>
     <% else %>
       <%= link_to "Iniciar sesion", new_usuario_session_path %>
       <%= link_to "Registrarme", new_usuario_registration_path %>
