--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,6 @@
 <head>
 	<title>HTML and CSS "Hello World"</title>
 	<style>
-		body {
-			background-color: #2D2D2D;
-            text-align: center;
-		}
 		
 		h1 {
 			color: #C26356;
@@ -20,6 +16,5 @@
 	</style>
 </head>
 <body>
-	<h1>Hello World Example</h1>
-    <img src='<%= asset_path("hello_world.jpeg") %>' alt="World Picture">
+	<h1>Bienvenido a Turnos UC</h1>
 </body>
