CRUD de turnos listo

--- a/app/views/turnos/edit.html.erb
+++ b/app/views/turnos/edit.html.erb
@@ -1,2 +1,36 @@
-<h1>Turnos#edit</h1>
-<p>Find me in app/views/turnos/edit.html.erb</p>
+<h1>Editar Turno</h1>
+<%= form_with(model: @turno , method: :patch, url: turnos_update_path(:id => @turno.id)) do |form| %>
+
+    <div>
+        <%= form.label :tipo_turno %>
+        <%= form.select :tipo, ["Seleccionar", "Ida", "Vuelta"] %>
+    </div>
+    <div>
+        <%= form.label :limite_personas %>
+        <%= form.text_field :limite_personas %>
+    </div>
+    <div>
+        <%= form.label :direccion_llegada %>
+        <%= form.text_field :direccion_llegada %>
+    </div>
+    <div>
+        <%= form.label :dia_de_la_semana %>
+        <%= form.text_field :dia_de_la_semana %>
+    </div>
+    <div>
+        <%= form.label :direccion_salida %>
+        <%= form.text_field :direccion_salida %>
+    </div>
+    <div>
+        <%= form.label :hora_salida %>
+        <%= form.text_field :hora_salida %>
+    </div>
+    <div>
+        <%= form.label :id_creador %>
+        <%= form.text_field :id_creador %>
+    </div>
+    <div>
+        <%= form.submit 'Editar Turno' %>
+    </div>
+    
+<% end %>
