--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <%= link_to "Cerrar sesion", destroy_usuario_session_path, method: :delete %>
     <% else %>
       <%= link_to "Iniciar sesion", new_usuario_session_path %>
-      <%= link_to "Registrarme", new_usuario_registration_path %>
+      <%= link_to "Registrarse", new_usuario_registration_path %>
     <% end %>
       
     <%= yield %>
