--- a/app/views/turnos/new.html.erb
+++ b/app/views/turnos/new.html.erb
@@ -21,10 +21,20 @@
         <%= form.label :direccion_salida %>
         <%= form.text_field :direccion_salida %>
     </div>
+
     <div>
-        <%= form.label :hora_salida %>
-        <%= form.text_field :hora_salida %>
+    <%=form.label :hora_de_salida  %>
+    <%=form.select :hora, ['00', '01', '02', '03', '04', '05', '06', '07', '08', '09', '10',
+                                '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21',
+                                '22', '23'] %>
+    <span class="colon">:</span>
+    <%=form.select :minutos, ['00', '15', '30', '45'] %>
     </div>
+
+    <%# <div>
+        <%= form.label :hora_salida %>
+        <%# <%= form.text_field :hora_salida %>
+    <%# </div> %>
     <div>
         <%= form.submit 'Crear Turno' %>
     </div>
