Change migrations name

--- a/app/views/solicituds/edit.html.erb
+++ b/app/views/solicituds/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Editar Solicitud</h1>
-<%= form_with(model: @solicitud , method: :patch, url: solicitudes_update_path(:id => @solicitud.id)) do |form| %>
+<%= form_with(model: @solicitud , method: :patch, url: solicituds_update_path(:id => @solicitud.id)) do |form| %>
 
     <div>
         <%= form.label :descripcion_solicitud %>
