--- a/app/views/turnos/index.html.erb
+++ b/app/views/turnos/index.html.erb
@@ -44,7 +44,7 @@ tr:nth-child(even) {
         <%  end  %>
     </tbody>
 </table>
-<%= link_to 'Ver mis solicitudes a nuevos turnos', solicitudes_index_path(:tipo => 'mis solicitudes') %>
+<%= link_to 'Ver mis solicitudes a nuevos turnos', solicituds_index_path(:tipo => 'mis solicitudes') %>
 <% if usuario_signed_in? %>
 <h1>Mis Turnos</h1>
 
