--- a/app/views/usuarios/registrations/new.html.erb
+++ b/app/views/usuarios/registrations/new.html.erb
@@ -1,67 +1,69 @@
 <h2>Registrarse</h2>
 
+<style>
+.input {
+  width: 500px;
+  height: 35px
+}
+</style>
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "usuarios/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :nombre, :class => "label"%>
+    <%# <%= f.label :nombre, :class => "label"%> 
       <div class="control">
-      <%= f.text_field :nombre, autofocus: true, autocomplete: "nombre", :class => "input", :type => "text" %>
+      <%= f.text_field :nombre, :class => "input", :type => "text", :placeholder => "Ingrese su Nombre"%>
       </div>
   </div>
 
   <div class="field">
-    <%= f.label :email, :class => "label" %>
+    <%# <%= f.label :email, :class => "label" %> 
     <div class="control has-icons-left has-icons-right">
-      <%= f.email_field :email, :class => "input is-danger", :type => "email", :placeholder => "Ingrese Email"%>
-      <span class="icon is-small is-left">
+      <%= f.email_field :email, :class => "input", :type => "email", :placeholder => "Ingrese Email"%>
+      <span class="icon is-small is-left" style="left:330px">
         <i class="fas fa-envelope"></i>
       </span>
-      <span class="icon is-small is-right">
+      <span class="icon is-small is-right" style="right:330px">
         <i class="fas fa-exclamation-triangle"></i>
       </span>
-    </div>
+    </div><br>
 
   <div class="field">
-    <%= f.label :telefono, :class => "label" %>
-    <a class="button is-static">
+  <div class="control">
+    <%# <%= f.label :telefono, :class => "label" %> 
+    <a class="button is-static" style="left:-40px">
       +569
     </a>
-    <%= f.phone_field :telefono %>
+    <%= f.phone_field :telefono, :type => "tel", :class => "input" , :placeholder => "Ingrese su Teléfono", :style=>"left:-40px"%>
   </div>
-
-
-
-
-  
-
-  <div class="field">
-    <%= f.label :direccion , :class => "label"%>
-    <%= f.text_field :direccion, autofocus: true, autocomplete: "direccion" %>
   </div>
 
   <div class="field">
-    <%= f.label :url_de_la_foto_de_perfil, :class => "label" %>
-    <%= f.text_field :imagen, autofocus: true, autocomplete: "url foto de perfil" %>
+    <%# <%= f.label :direccion , :class => "label"%> 
+    <%= f.text_field :direccion, :class => "input", :type => "text", :placeholder => "Ingrese su Direccion" %>
   </div>
 
   <div class="field">
-    <%= f.label :contraseña, :class => "label"%>
+    <%# <%= f.label :foto_de_perfil, :class => "label" %> 
+    <%= f.text_field :imagen, :class => "input", :type => "text", :placeholder => "Ingrese el url de la foto" %>
+  </div>
+
+  <div class="field">
+    <%# <%= f.label :contraseña, :class => "label"%> 
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> caracteres mínimo)</em>
-    <% end %><br />
+    <% end %>
     <p class="control has-icons-left">
-    <%= f.password_field :password, :class => "input", :type => "password", :placeholder => "Contraseña" %>
-    <span class="icon is-small is-left">
+    <%= f.password_field :password, :class => "input", :type => "password", :placeholder => "Contraseña (6 caracteres mínimo)" %>
+    <span class="icon is-small is-left" style="left:330px" >
       <i class="fas fa-lock"></i>
     </span>
   </p>
   </div>
 
   <div class="field">
-    <%= f.label :confirmacion_contraseña, :class => "label" %>
-
-    <%= f.password_field :password_confirmation, autocomplete: "confirmacion nueva contraseña" %>
+    <%# <%= f.label :confirmacion_contraseña, :class => "label" %> 
+    <%= f.password_field :password_confirmation, :class => "input", :type => "password", :placeholder => "Contraseña"  %>
   </div>
 
   <div class="actions">
